--- a/JobSeekerServer/pom.xml
+++ b/JobSeekerServer/pom.xml
@@ -9,12 +9,24 @@
 
     <name>JobSeekerServer</name>
 
+    <!-- Spring Repo -->
+    <repositories>
+        <repository>
+            <id>springsource-repo</id>
+            <name>SpringSource Repository</name>
+            <url>http://repo.springsource.org/release</url>
+        </repository>
+    </repositories>
+    
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    
+    
     <dependencies>
+        <!-- Spring --> 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
