--- a/JobSeekerServer/pom.xml
+++ b/JobSeekerServer/pom.xml
@@ -9,14 +9,14 @@
 
     <name>JobSeekerServer</name>
 
-    <!-- Spring Repo -->
+<!--     Spring Repo 
     <repositories>
         <repository>
             <id>springsource-repo</id>
             <name>SpringSource Repository</name>
             <url>http://repo.springsource.org/release</url>
         </repository>
-    </repositories>
+    </repositories>-->
     
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -56,6 +56,16 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.4</version>
+        </dependency>
+        <dependency>
+            <groupId>httpunit</groupId>
+            <artifactId>httpunit</artifactId>
+            <version>1.7</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
