--- a/JobSeekerServer/pom.xml
+++ b/JobSeekerServer/pom.xml
@@ -27,7 +27,12 @@
     
     
     <dependencies>
-       
+       <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.24</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
